# hellogtk

./: .gitignore  Makefile.am  configure.ac  hello.c
src/: Makefile.am  cpu.c  cpu.h  hello.c
